--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -3,28 +3,30 @@
   background-color: rgb(165, 120, 165); /* เปลี่ยนสีพื้นหลังเป็นสีม่วง */
 }
 
-.title {
-  font-size: 70px; /* กำหนดขนาดฟอนต์ให้ใหญ่ขึ้น */
-  color: #974141; /* กำหนดสีของตัวอักษร */
-  text-align: center; /* จัดให้อยู่กลาง */
-  margin: 20px 0; /* ระยะห่างด้านบนและล่าง */
-}
-
 .header {
   display: flex;                  /* ใช้ flexbox */
-  /* background-color: #333;        สีพื้นหลัง */
-  padding: 5px 20px;            /* ระยะห่างภายใน */
+  background-color: #333;       
+  padding: 0px 20px;            /* ระยะห่างภายใน */
   justify-content: space-between;  
+  height: 50px;
+  
 }
+
+.header-title {
+  font-size: 30px; /* กำหนดขนาดฟอนต์ให้ใหญ่ขึ้น */
+  color: #ffffff; /* กำหนดสีของตัวอักษร */
+  text-align: center; /* จัดให้อยู่กลาง */
+}
+
 
 .header-button {
   background-color: transparent;  /* ไม่มีพื้นหลัง */
-  color: rgb(0, 0, 0);                  /* สีตัวอักษร */
+  color: rgb(255, 255, 255);                  /* สีตัวอักษร */
   border: none;                  /* ไม่มีกรอบ */
-  padding: 10px 15px;            /* ระยะห่างภายในปุ่ม */
   margin-right: 20px;            /* ระยะห่างระหว่างปุ่ม */
   cursor: pointer; 
   font-size: 20px;
+  text-align: center; /* จัดให้อยู่กลาง */
 }
 
 .header-button i {
