--- a/portfolio/src/page/menu.css
+++ b/portfolio/src/page/menu.css
@@ -3,7 +3,7 @@
     width: 100%;
     flex-direction: column;
     height: 100vh; /* ใช้ความสูงเต็มหน้าจอ */
-    background-image: url(/public/images/15.jpg);
+    background-image: url(/public/images/old2.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
