--- a/portfolio/src/page/page.css
+++ b/portfolio/src/page/page.css
@@ -11,7 +11,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(/public/images/17.jpg);
+    background-image: url(/public/images/old2.jpg);
 }
 
 .header {
